Fixed the dreadful spacing on the service blocks

--- a/src/assets/styles/scaffolding.scss
+++ b/src/assets/styles/scaffolding.scss
@@ -49,6 +49,14 @@
     margin-right: auto;
     width: 78%;
 
+    @media #{$laptop-up} {
+      width: 72%;
+    }
+
+    @media #{$portrait} {
+      width: 100%;
+    }
+
     @media #{$xl-up} {
       width: 60%;
     }
